--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
   <!-- Link to external stylesheet -->
-  <link rel="stylesheet" href="/Frontend/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -56,8 +56,8 @@
 
           <!-- Dropdown menu for user actions -->
           <ul class="dropdown" id="dropdownMenu">
-            <li><a href="/Frontend/signup.html">Sign Up</a></li> <!-- Link to sign-up page -->
-            <li><a href="/Frontend/login.html">Log In</a></li> <!-- Link to log-in page -->
+            <li><a href="signup.html">Sign Up</a></li> <!-- Link to sign-up page -->
+            <li><a href="login.html">Log In</a></li> <!-- Link to log-in page -->
           </ul>
         </div>
       </div>
@@ -76,7 +76,7 @@
     <p>Your one-stop shop for all things amazing!</p>
 
     <!-- Call-to-action button linking to the sign-up/log-in page -->
-    <a href="/Frontend/signup.html" class="cta-btn">Sign Up / Log In</a>
+    <a href="signup.html" class="cta-btn">Sign Up / Log In</a>
   </section>
 
   <!-- About Us Section -->
@@ -103,7 +103,7 @@
 
       <!-- Image representing the "About Us" section -->
       <div class="about-image">
-        <img src="/Frontend/Images/about-us.jpg" alt="About Us"> <!-- Image source and alt text -->
+        <img src="Images/about-us.jpg" alt="About Us"> <!-- Image source and alt text -->
       </div>
     </div>
   </section>
@@ -121,7 +121,7 @@
         <!-- Product Card 1 -->
         <div class="product-card">
           <!-- Product image -->
-          <img src="/Frontend/Images/smartphone.jpeg" alt="Smartphone Pro">
+          <img src="Images/smartphone.jpeg" alt="Smartphone Pro">
           <!-- Product name -->
           <h3>Smartphone Pro</h3>
           <!-- Product price -->
@@ -132,7 +132,7 @@
 
         <!-- Product Card 2 -->
         <div class="product-card">
-          <img src="/Frontend/Images/wireless-headphones.jpg" alt="Wireless Headphones">
+          <img src="Images/wireless-headphones.jpg" alt="Wireless Headphones">
           <h3>Wireless Headphones</h3>
           <p>$199</p>
           <button class="buy-btn">Buy Now</button>
@@ -140,7 +140,7 @@
 
         <!-- Product Card 3 -->
         <div class="product-card">
-          <img src="/Frontend/Images/smartwatch.jpg" alt="Smartwatch">
+          <img src="Images/smartwatch.jpg" alt="Smartwatch">
           <h3>Smartwatch</h3>
           <p>$299</p>
           <button class="buy-btn">Buy Now</button>
@@ -148,7 +148,7 @@
 
         <!-- Product Card 4 -->
         <div class="product-card">
-          <img src="/Frontend/Images/gaming-laptop.jpg" alt="Gaming Laptop">
+          <img src="Images/gaming-laptop.jpg" alt="Gaming Laptop">
           <h3>Gaming Laptop</h3>
           <p>$1299</p>
           <button class="buy-btn">Buy Now</button>
@@ -156,28 +156,28 @@
 
         <!-- Additional Product Cards -->
         <div class="product-card">
-          <img src="/Frontend/Images/bluetooth-speaker.jpg" alt="Bluetooth Speaker">
+          <img src="Images/bluetooth-speaker.jpg" alt="Bluetooth Speaker">
           <h3>Bluetooth Speaker</h3>
           <p>$89</p>
           <button class="buy-btn">Buy Now</button>
         </div>
 
         <div class="product-card">
-          <img src="/Frontend/Images/tablet-pro.jpg" alt="Tablet Pro">
+          <img src="Images/tablet-pro.jpg" alt="Tablet Pro">
           <h3>Tablet Pro</h3>
           <p>$799</p>
           <button class="buy-btn">Buy Now</button>
         </div>
 
         <div class="product-card">
-          <img src="/Frontend/Images/drone-camera.jpg" alt="Drone Camera">
+          <img src="Images/drone-camera.jpg" alt="Drone Camera">
           <h3>Drone Camera</h3>
           <p>$499</p>
           <button class="buy-btn">Buy Now</button>
         </div>
 
         <div class="product-card">
-          <img src="/Frontend/Images/vr-headset.jpg" alt="VR Headset">
+          <img src="Images/vr-headset.jpg" alt="VR Headset">
           <h3>VR Headset</h3>
           <p>$299</p>
           <button class="buy-btn">Buy Now</button>
@@ -194,10 +194,10 @@
     <!-- Grid layout for gallery images -->
     <div class="gallery-grid">
       <!-- Gallery images with alt text for accessibility -->
-      <img src="/Frontend/Images/gallery-1.jpg" alt="Product 1">
-      <img src="/Frontend/Images/gallery-2.jpg" alt="Product 2">
-      <img src="/Frontend/Images/gallery-3.jpg" alt="Product 3">
-      <img src="/Frontend/Images/gallery-4.jpg" alt="Product 4">
+      <img src="Images/gallery-1.jpg" alt="Product 1">
+      <img src="Images/gallery-2.jpg" alt="Product 2">
+      <img src="Images/gallery-3.jpg" alt="Product 3">
+      <img src="Images/gallery-4.jpg" alt="Product 4">
     </div>
   </section>
 
@@ -279,7 +279,7 @@
 
   <!-- Scripts -->
   <!-- Link to the external JavaScript file -->
-  <script src="/Frontend/script.js"></script>
+  <script src="script.js"></script>
 
 </body>
 
