--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <!-- Page title -->
   <title>E-Commerce Website</title>
 
+  <link rel="icon" href="data:,">
+
   <!-- Link to Font Awesome library for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
